[tool.pytest.ini_options]
addopts = """
    -s -p no:warnings
    --ignore docs
    --cov mlflavors
    --cov-report xml
    --cov-report html
"""
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "[pytest][%(asctime)s][%(levelname)s][%(module)s][%(funcName)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_level = "INFO"

[tool.coverage.run]
branch = true
source = [
    "mlflavors"
]

[tool.coverage.report]
ignore_errors = true
omit = [
    "tests/*",
    "setup.py",
]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pydocstyle]
convention = "numpy"
match = '(?!test_|conftest).*\.py'
add-ignore = ["D100", "D101","D104", "D205", "D400"]

[build-system]
requires = [
    "setuptools>=66.0.0",
    "wheel",
]
